--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon-tron2.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>React App</title>
+  <title>TRON</title>
 </head>
 
 <body>
